feat: update new trademark

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
-    <title>Project IDX</title>
+    <title>IDX CLUSTER</title>
     <script defer src="https://cdn.jsdelivr.net/npm/three@0.137.0/build/three.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/three@0.137.0/examples/js/controls/OrbitControls.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/three@0.137.0/examples/js/loaders/GLTFLoader.js"></script>
@@ -30,7 +30,7 @@
                 <span class="preloader__ring preloader__ring--inner"></span>
                 <span class="preloader__pulse"></span>
             </div>
-            <p class="preloader__title">Project IDX</p>
+            <p class="preloader__title">IDX Cluster</p>
             <p class="preloader__status">
                 <span class="preloader__status-text">Initializing interface</span>
                 <span class="preloader__dots" aria-hidden="true">
